apps/base/error-pages/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: error-pages
  namespace: kube-system
spec:
  selector:
    app: error-pages
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-pages
  namespace: kube-system
  labels:
    app: error-pages
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: error-pages
  template:
    metadata:
      labels:
        app: error-pages
    spec:
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: error-pages
          image: ghcr.io/tarampampam/error-pages:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
      restartPolicy: Always
