apps/base/error-pages/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: error-pages
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`.+`)
      kind: Rule
      priority: 10
      services:
        - kind: Service
          name: error-pages
          port: http
      middlewares:
        - name: error-pages
          namespace: kube-system
